--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1; url=https://www.amazon.com/Training-Toilets-Non-Slip-Splash-Storage/dp/B079TBSK6T/ref=gbps_tit_m-9_53c0_8ec1063d?smid=A3PRI6U464NNUK&pf_rd_p=806222ac-2f87-4ede-a31c-ac60f36f53c0&pf_rd_s=merchandised-search-9&pf_rd_t=101&pf_rd_i=15529609011&pf_rd_m=ATVPDKIKX0DER&pf_rd_r=X6AQP3JC6YQZK9JE58R4">   
+        <meta http-equiv="refresh" content="1; url=https://www.amazon.com/Toilet-Training-Round-Toilets-Non-Slip/dp/B07JLCYVC7/ref=sr_1_1_a_it?ie=UTF8&qid=1547138719&sr=8-1-spons&keywords=potty+training+seat&psc=1">   
         <script type="text/javascript">
-               window.location.href = "https://www.amazon.com/Training-Toilets-Non-Slip-Splash-Storage/dp/B079TBSK6T/ref=gbps_tit_m-9_53c0_8ec1063d?smid=A3PRI6U464NNUK&pf_rd_p=806222ac-2f87-4ede-a31c-ac60f36f53c0&pf_rd_s=merchandised-search-9&pf_rd_t=101&pf_rd_i=15529609011&pf_rd_m=ATVPDKIKX0DER&pf_rd_r=X6AQP3JC6YQZK9JE58R4"
+               window.location.href = "https://www.amazon.com/Toilet-Training-Round-Toilets-Non-Slip/dp/B07JLCYVC7/ref=sr_1_1_a_it?ie=UTF8&qid=1547138719&sr=8-1-spons&keywords=potty+training+seat&psc=1"
         </script>
         <title>Page Redirection</title>
     </head>
