--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1; url=https://www.amazon.com/Toilet-Training-Round-Toilets-Non-Slip/dp/B07JLCYVC7/ref=sr_1_1_a_it?ie=UTF8&qid=1547138719&sr=8-1-spons&keywords=potty+training+seat&psc=1">   
+        <meta http-equiv="refresh" content="1; url=https://www.amazon.com/s/ref=nb_sb_noss?url=search-alias%3Daps&field-keywords=potty+training+seat">   
         <script type="text/javascript">
-               window.location.href = "https://www.amazon.com/Toilet-Training-Round-Toilets-Non-Slip/dp/B07JLCYVC7/ref=sr_1_1_a_it?ie=UTF8&qid=1547138719&sr=8-1-spons&keywords=potty+training+seat&psc=1"
+               window.location.href = "https://www.amazon.com/s/ref=nb_sb_noss?url=search-alias%3Daps&field-keywords=potty+training+seat"
         </script>
         <title>Page Redirection</title>
     </head>
