--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1; url=https://www.amazon.com/s/ref=nb_sb_noss?url=search-alias%3Daps&field-keywords=potty+training+seat">   
+        <meta http-equiv="refresh" content="1; url=https://www.amazon.com">   
         <script type="text/javascript">
-               window.location.href = "https://www.amazon.com/s/ref=nb_sb_noss?url=search-alias%3Daps&field-keywords=potty+training+seat"
+               window.location.href = "https://www.amazon.com"
         </script>
         <title>Page Redirection</title>
     </head>
