--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1; url=https://www.amazon.com/dp/B01G4W06OC?aaxitk=HagUvTKZd4mUaQXHBaAV9g&pd_rd_i=B01G4W06OC&pf_rd_p=3ff6092e-8451-438b-8278-7e94064b4d42&hsa_cr_id=1711769160901&sb-ci-n=asinImage&sb-ci-v=https%3A%2F%2Fimages-na.ssl-images-amazon.com%2Fimages%2FI%2F31h-DhwMGsL.jpg&sb-ci-a=B01G4W06OC&th=1">   
+        <meta http-equiv="refresh" content="1; url=https://www.ebay.com/itm/New-Women-Bags-Purse-Shoulder-Handbag-Tote-Messenger-Hobo-Satchel-Bag-Cross-Body/302376737752?epid=7007872309&hash=item46670edbd8:m:mpByTf4pnyhBPuxOLbSQJmA:rk:1:pf:1&frcectupt=true">   
         <script type="text/javascript">
-               window.location.href = "https://www.amazon.com/dp/B01G4W06OC?aaxitk=HagUvTKZd4mUaQXHBaAV9g&pd_rd_i=B01G4W06OC&pf_rd_p=3ff6092e-8451-438b-8278-7e94064b4d42&hsa_cr_id=1711769160901&sb-ci-n=asinImage&sb-ci-v=https%3A%2F%2Fimages-na.ssl-images-amazon.com%2Fimages%2FI%2F31h-DhwMGsL.jpg&sb-ci-a=B01G4W06OC&th=1"
+               window.location.href = "https://www.ebay.com/itm/New-Women-Bags-Purse-Shoulder-Handbag-Tote-Messenger-Hobo-Satchel-Bag-Cross-Body/302376737752?epid=7007872309&hash=item46670edbd8:m:mpByTf4pnyhBPuxOLbSQJmA:rk:1:pf:1&frcectupt=true"
         </script>
         <title>Page Redirection</title>
     </head>
